Introduced adminResult property and possibility to not update from api if 'locked'.